--- a/src/assets/components/Badges/_base.scss
+++ b/src/assets/components/Badges/_base.scss
@@ -6,6 +6,10 @@
   line-height: 21px;
 }
 
+.badge:hover {
+  cursor: pointer;
+}
+
 @mixin badge-neutral-variant($parent, $color) {
   #{$parent} {
     background-color: $color !important;
@@ -13,6 +17,5 @@
 }
 
 @each $color, $value in $theme-colors-neutral {
-  @include badge-neutral-variant(".badge-neutral-#{$color}", $value);
+  @include badge-neutral-variant('.badge-neutral-#{$color}', $value);
 }
-
