--- a/src/assets/core/_variables.scss
+++ b/src/assets/core/_variables.scss
@@ -97,6 +97,7 @@ $instagram: #e4405f;
 $pinterest: #bd081c;
 $youtube: #cd201f;
 $slack: #3aaf85;
+$whatsapp: #3aaf85;
 $dribbble: #ea4c89;
 $github: #222222;
 
@@ -145,6 +146,7 @@ $brand-colors: map-merge(
     'pinterest': $pinterest,
     'youtube': $youtube,
     'slack': $slack,
+    'whatsapp': $whatsapp,
     'dribbble': $dribbble,
     'github': $github
   ),
