--- a/src/assets/components/MasonryGallary/_base.scss
+++ b/src/assets/components/MasonryGallary/_base.scss
@@ -3,8 +3,12 @@
   position: relative;
   margin-bottom: $spacer;
   border-radius: $border-radius;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+
 .masonry_item_wrapper:hover {
+  cursor: pointer;
   box-shadow: $box-shadow-layout-bottom;
 }
 .masonry_item_content {
